fix team section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,8 +149,16 @@ hr {
 
 .team-members {
     /* border-left: 4px solid #132845;*/
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 991px) {
+    .team-members {
+        /* border-left: 4px solid #132845;*/
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 }
 
 .team-border {
